syntax = "proto3";

package grounds;

option java_multiple_files = true;
option java_package = "gg.grounds.grpc";
option java_outer_classname = "GroundsProto";

service PlayerPresenceService {
  rpc TryPlayerLogin (PlayerLoginRequest) returns (PlayerLoginReply);
  rpc PlayerLogout (PlayerLogoutRequest) returns (PlayerLogoutReply);
}

message PlayerLoginRequest {
  string player_id = 1;
}

message PlayerLoginReply {
  LoginStatus status = 1;
  string message = 2;
}

message PlayerLogoutRequest {
  string player_id = 1;
}

message PlayerLogoutReply {
  bool removed = 1;
  string message = 2;
}

enum LoginStatus {
  LOGIN_STATUS_UNSPECIFIED = 0;
  LOGIN_STATUS_ACCEPTED = 1;
  LOGIN_STATUS_ALREADY_ONLINE = 2;
  LOGIN_STATUS_INVALID_REQUEST = 3;
  LOGIN_STATUS_ERROR = 4;
}
